Merging Semih and Hasan